--- a/src/app/fill-survey/fill-survey.component.html
+++ b/src/app/fill-survey/fill-survey.component.html
@@ -222,12 +222,12 @@
       <button mat-raised-button color="secondary" style="float: right;" type="button" (click)="resetSign()"><span>תיקון
           חתימה</span></button>
     </div> -->
-    <div class="button-row">
+    <!-- <div class="button-row">
       <button class="full-width mb-5" style="font-weight: bold;font-size: 20px;color: black;" color="primary"
         (click)="fillForm(1)" type="submit" mat-raised-button>
         <span>להמשיך מאוחר יותר</span>
       </button>
-    </div>
+    </div> -->
     <div class="button-row">
       <button class="full-width mb-5" style="font-weight: bold;font-size: 20px;color: white;" color="primary"
         (click)="onSubmit()" type="submit" mat-raised-button>
