--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -320,7 +320,7 @@
             </form>
             <div mat-dialog-actions>
                 <div class="row">
-                    <button mat-raised-button color="primary" (click)="submitNewAction()"
+                    <button mat-raised-button color="primary" (click)="submitNewAction('','')"
                         mat-dialog-close>שליחה</button>
                 </div>
             </div>
@@ -328,27 +328,47 @@
                 <table mat-table [dataSource]="newActionsData" dir="rtl" class="mat-elevation-z8">
                     <ng-container matColumnDef="date">
                         <th mat-header-cell *matHeaderCellDef> תאריך </th>
-                        <td mat-cell *matCellDef="let element"> {{element.Bug_Date}} </td>
+                        <td mat-cell *matCellDef="let element" style="font-size: 22px;"
+                            [style.color]="element.Action_Priority == 'גבוהה' ? 'white' : 'black'"> {{element.Bug_Date}}
+                        </td>
                     </ng-container>
 
                     <ng-container matColumnDef="subject">
                         <th mat-header-cell *matHeaderCellDef> תוכן </th>
-                        <td mat-cell *matCellDef="let element"> {{element.Bug_Subject}} </td>
+                        <td mat-cell *matCellDef="let element" style="font-size: 22px;"
+                            [style.color]="element.Action_Priority == 'גבוהה' ? 'white' : 'black'">
+                            {{element.Bug_Subject}} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="priority">
                         <th mat-header-cell *matHeaderCellDef> עדיפות </th>
-                        <td mat-cell *matCellDef="let element"> {{element.Action_Priority}} </td>
+                        <td mat-cell *matCellDef="let element" style="font-size: 22px;"
+                            [style.color]="element.Action_Priority == 'גבוהה' ? 'white' : 'black'">
+                            <mat-select [(ngModel)]="element.Action_Priority" (selectionChange)="submitNewAction($event.value,element.Row_ID)">
+                                <mat-option value="נמוכה">
+                                    נמוכה
+                                </mat-option>
+                                <mat-option value="ממוצעת">
+                                    ממוצעת
+                                </mat-option>
+                                <mat-option value="גבוהה">
+                                    גבוהה
+                                </mat-option>
+                            </mat-select>
+                        </td>
                     </ng-container>
 
                     <ng-container matColumnDef="done">
                         <th mat-header-cell *matHeaderCellDef> סטטוס </th>
-                        <td mat-cell *matCellDef="let element" [style.background]="element.Bug_Done == 'טופל' ? 'darkgray': 'aquamarine'"> {{element.Bug_Done}} </td>
+                        <td mat-cell *matCellDef="let element" style="font-size: 22px;"
+                            [style.background]="element.Bug_Done == 'טופל' ? 'darkgray': 'aquamarine'">
+                            {{element.Bug_Done}} </td>
                     </ng-container>
 
                     <tr mat-header-row *matHeaderRowDef="actionColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: actionColumns;"
-                        [style.background]="row.Action_Priority == 'גבוהה' ? 'brown' : row.Action_Priority == 'ממוצעת' ? 'antiquewhite': 'aliceblue'"></tr>
+                    <tr mat-row *matRowDef="let row; columns: actionColumns;" style="font-weight: bold;"
+                        [style.background]="row.Action_Priority == 'גבוהה' ? 'brown' : row.Action_Priority == 'ממוצעת' ? 'antiquewhite': 'aliceblue'">
+                    </tr>
                 </table>
             </div>
         </mat-tab>
