--- a/src/app/nurses-manage-dashboard/other-departments/other-departments.component.css
+++ b/src/app/nurses-manage-dashboard/other-departments/other-departments.component.css
@@ -22,14 +22,14 @@
 
 @media only screen and (min-width: 1050px) {
 
-  .mat-column-patientid{
-    width: 100px !important;
+  .mat-column-casenumber{
+    width: 120px !important;
   }
-  .mat-column-firstname{
+  .mat-column-area{
     width: 12px !important;
   }
-  .mat-column-lastname{
-    width: 12px !important;
+  .mat-column-fullname{
+    width: 150px !important;
   }
   .mat-column-departname{
     width: 12px !important;
