--- a/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
+++ b/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
@@ -4,13 +4,16 @@
     <span aria-hidden="true">&times;</span>
 </button>
 <form class="form" [formGroup]="deliveryRoomForm" *ngIf="delivery">
-    <h4><span class="material-icons" id="navigate-icon-next" (click)="getOtherDepartmentsDetails('next')" matTooltip="יום אחרי">
-        navigate_next
-    </span><b style="margin-left: 120px;">לאחר לידה </b> <span>{{newDate |
+    <h4><span class="material-icons" id="navigate-icon-next" (click)="getOtherDepartmentsDetails('next')"
+            matTooltip="יום אחרי">
+            navigate_next
+        </span><b style="margin-left: 120px;">לאחר לידה </b> <span>{{newDate |
             date: "dd.MM.yyyy"}}</span>
-            <span class="material-icons" id="navigate-icon-before" (click)="getOtherDepartmentsDetails('before')" matTooltip="יום לפני">
-                navigate_before
-            </span></h4>
+        <span class="material-icons" id="navigate-icon-before" (click)="getOtherDepartmentsDetails('before')"
+            matTooltip="יום לפני">
+            navigate_before
+        </span>
+    </h4>
     <table dir="rtl" [dataSource]="dataSource3" mat-table class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="all">
@@ -131,7 +134,18 @@
 </form>
 
 <form class="form" *ngIf="surgery">
-    <h4><b style="margin-left: 120px;">חדר ניתוח </b> {{myDate | date: "dd.MM.yyyy"}}</h4>
+    <h4>
+        <span class="material-icons" id="navigate-icon-next" (click)="getOtherDepartmentsDetails('next')"
+            matTooltip="יום אחרי">
+            navigate_next
+        </span><b style="margin-left: 120px;">חדר ניתוח </b> <span>{{newDate |
+            date: "dd.MM.yyyy"}}</span>
+        <span class="material-icons" id="navigate-icon-before" (click)="getOtherDepartmentsDetails('before')"
+            matTooltip="יום לפני">
+            navigate_before
+        </span>
+    </h4>
+    <!-- <h4><b style="margin-left: 120px;">חדר ניתוח </b> {{myDate | date: "dd.MM.yyyy"}}</h4> -->
     <table dir="rtl" [dataSource]="dataSource4" mat-table class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="inprogress">
@@ -167,33 +181,33 @@
     <table dir="rtl" mat-table [dataSource]="dataSource4_2" class="mat-elevation-z8" id="patientsTable"
         style="width: 100%;">
 
-        <ng-container matColumnDef="patientid">
-            <th mat-header-cell *matHeaderCellDef> תעודת זהות </th>
-            <td mat-cell *matCellDef="let element"> {{element.PatientId}} </td>
+        <ng-container matColumnDef="casenumber">
+            <th mat-header-cell *matHeaderCellDef> מספר מקרה </th>
+            <td mat-cell *matCellDef="let element"> {{element.CaseNumber}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="firstname">
-            <th mat-header-cell *matHeaderCellDef> שם פרטי </th>
-            <td mat-cell *matCellDef="let element"> {{element.PatientFirstName}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="lastname">
-            <th mat-header-cell *matHeaderCellDef> שם משפחה </th>
-            <td mat-cell *matCellDef="let element"> {{element.PatientLastName}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="departname">
-            <th mat-header-cell *matHeaderCellDef> מחלקה רפואית </th>
-            <td mat-cell *matCellDef="let element"> {{element.DepartName}} </td>
+        <ng-container matColumnDef="area">
+            <th mat-header-cell *matHeaderCellDef> מתחם </th>
+            <td mat-cell *matCellDef="let element"> {{element.DepartNameDoing}} </td>
         </ng-container>
 
         <ng-container matColumnDef="room">
-            <th mat-header-cell *matHeaderCellDef> חדר ניתוח </th>
+            <th mat-header-cell *matHeaderCellDef> חדר </th>
             <td mat-cell *matCellDef="let element"> {{element.SurgeryRoom}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="departname">
+            <th mat-header-cell *matHeaderCellDef> מחלקה יוזמת </th>
+            <td mat-cell *matCellDef="let element"> {{element.DepartName}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="fullname">
+            <th mat-header-cell *matHeaderCellDef> פרטי מטופל </th>
+            <td mat-cell *matCellDef="let element"> {{element.PatientFirstName}} </td>
+        </ng-container>
+
         <ng-container matColumnDef="surgeryname">
-            <th mat-header-cell *matHeaderCellDef> שם ניתוח </th>
+            <th mat-header-cell *matHeaderCellDef> שם פרוצדורה </th>
             <td mat-cell *matCellDef="let element" style="font-size: 16px;"> {{element.SurgeryName}} </td>
         </ng-container>
 
@@ -286,8 +300,7 @@
             <th mat-header-cell *matHeaderCellDef> נשים </th>
             <td mat-cell *matCellDef="let element"><button type="button"
                     (click)="getOtherDepartmentPatients('WOMEN','0',$event)" mat-raised-button
-                    matTooltip="מטופלים במצטבר"
-                    style="background-image: linear-gradient(grey, aquamarine);">
+                    matTooltip="מטופלים במצטבר" style="background-image: linear-gradient(grey, aquamarine);">
                     {{element.WOMEN}}
                 </button> <button type="button" style="background-color: aquamarine;"
                     (click)="getOtherDepartmentPatients('WOMEN','1',$event)" matTooltip="מטופלים כעת" [disabled]
@@ -299,8 +312,7 @@
             <th mat-header-cell *matHeaderCellDef> ילדים </th>
             <td mat-cell *matCellDef="let element"><button type="button"
                     (click)="getOtherDepartmentPatients('CHILDREN','0',$event)" mat-raised-button
-                    style="background-image: linear-gradient(grey, aquamarine);"
-                    matTooltip="מטופלים במצטבר">
+                    style="background-image: linear-gradient(grey, aquamarine);" matTooltip="מטופלים במצטבר">
                     {{element.CHILDREN}}
                 </button> <button type="button" style="background-color: aquamarine;"
                     (click)="getOtherDepartmentPatients('CHILDREN','1',$event)" matTooltip="מטופלים כעת" [disabled]
