--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -168,7 +168,7 @@
                 type="button" class="btn btn-raised mr-1" style="background-color: grey;" (click)="bugReport()">
                 <i class="material-icons">info</i>
             </button>
-            <button *ngIf="UserName == 'adahabre'" matTooltipPosition="left" matTooltip="בקשה לתגבור" id="EventBtndisplay" mat-raised-button
+            <button *ngIf="UserName == 'adahabre' || UserName == 'owertheim'" matTooltipPosition="left" matTooltip="בקשה לתגבור" id="EventBtndisplay" mat-raised-button
                 type="button" class="btn btn-raised mr-1" style="background-color: limegreen;" (click)="openReinforcementtDialog('')">
                 <!-- <span class="material-icons">
                     help
