--- a/src/app/nurses-manage-dashboard/nurses-reinforcement/nurses-reinforcement.component.css
+++ b/src/app/nurses-manage-dashboard/nurses-reinforcement/nurses-reinforcement.component.css
@@ -6,3 +6,9 @@ table{
     transform: rotateZ(180deg);
     margin-top: 30px;
 }
+table tr.active td {  
+    background-color:limegreen !important;  
+    color: white;  
+    font-size: 20px;
+    font-weight: bold;
+  } 
