--- a/src/app/nurses-manage-dashboard/nurses-reinforcement/nurses-reinforcement.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-reinforcement/nurses-reinforcement.component.html
@@ -7,7 +7,7 @@
 
     <div class="row" style="display: block;">
         <div class="row">
-            <h3 class="mr-2">מבקש התגבור :</h3>
+            <h3 class="mr-2">{{Reinf_nurse.type}} :</h3>
             <h5 class="mr-3">{{Reinf_nurse.name}} - {{Reinf_nurse.number}}</h5>
         </div>
         <div class="row">
@@ -55,7 +55,7 @@
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="chooseReinfNurse(row)">
+            <tr mat-row *matRowDef="let row; columns: displayedColumns; let i= index;" (click)="chooseReinfNurse(row,i)" [class.active]="i === HighlightRow">
             </tr>
         </table>
         <div class="text-right" style="padding-bottom: 8%;">
@@ -69,7 +69,7 @@
 
     <div class="row" style="display: block;">
         <div class="row">
-            <h3 class="mr-2">מתגבר :</h3>
+            <h3 class="mr-2">{{Reinf_emp.type}} :</h3>
             <h5 class="mr-3">{{Reinf_emp.name}} - {{Reinf_emp.number}}</h5>
         </div>
         <div class="row">
@@ -117,7 +117,7 @@
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns2;" (click)="chooseReinfEmployee(row)">
+            <tr mat-row *matRowDef="let row; columns: displayedColumns2; let i= index;" (click)="chooseReinfEmployee(row,i)" [class.active]="i === HighlightRow2">
             </tr>
         </table>
         <div class="text-right" style="padding-bottom: 8%;">
